; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/console/extr_virtio_console.c_vtcon_ctrl_event_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/console/extr_virtio_console.c_vtcon_ctrl_event_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtcon_softc = type { i32 }
%struct.virtio_console_control = type { i32 }

@VTCON_CTRL_BUFSZ = common dso_local global i32 0, align 4
@M_DEVBUF = common dso_local global i32 0, align 4
@M_ZERO = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vtcon_softc*)* @vtcon_ctrl_event_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtcon_ctrl_event_create(%struct.vtcon_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vtcon_softc*, align 8
  %4 = alloca %struct.virtio_console_control*, align 8
  %5 = alloca i32, align 4
  store %struct.vtcon_softc* %0, %struct.vtcon_softc** %3, align 8
  %6 = load i32, i32* @VTCON_CTRL_BUFSZ, align 4
  %7 = load i32, i32* @M_DEVBUF, align 4
  %8 = load i32, i32* @M_ZERO, align 4
  %9 = load i32, i32* @M_NOWAIT, align 4
  %10 = or i32 %8, %9
  %11 = call %struct.virtio_console_control* @malloc(i32 %6, i32 %7, i32 %10)
  store %struct.virtio_console_control* %11, %struct.virtio_console_control** %4, align 8
  %12 = load %struct.virtio_console_control*, %struct.virtio_console_control** %4, align 8
  %13 = icmp eq %struct.virtio_console_control* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @ENOMEM, align 4
  store i32 %15, i32* %2, align 4
  br label %28

16:                                               ; preds = %1
  %17 = load %struct.vtcon_softc*, %struct.vtcon_softc** %3, align 8
  %18 = load %struct.virtio_console_control*, %struct.virtio_console_control** %4, align 8
  %19 = call i32 @vtcon_ctrl_event_enqueue(%struct.vtcon_softc* %17, %struct.virtio_console_control* %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %16
  %23 = load %struct.virtio_console_control*, %struct.virtio_console_control** %4, align 8
  %24 = load i32, i32* @M_DEVBUF, align 4
  %25 = call i32 @free(%struct.virtio_console_control* %23, i32 %24)
  br label %26

26:                                               ; preds = %22, %16
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %26, %14
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local %struct.virtio_console_control* @malloc(i32, i32, i32) #1

declare dso_local i32 @vtcon_ctrl_event_enqueue(%struct.vtcon_softc*, %struct.virtio_console_control*) #1

declare dso_local i32 @free(%struct.virtio_console_control*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
